Fixup code, get rid of custom version checking, use Paper's built-in functions for that.